--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           <div class="col-2">
             <h1>
               Give your Workout<br />
-              a new Style!
+              a new Style and Fasion week.
             </h1>
             <p>
               Lorem ipsum dolor sit amet consectetur adipisicing elit.<br />
