--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Red store | Ecommerce Website Design</title>
+    <title>Red store | Ecommerce Website Design by rimzhim:</title>
     <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,200&display=swap"
@@ -50,8 +50,8 @@
               a new Style and Fasion week.
             </h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.<br />
-              Voluptas rerum maiores animi officiis
+              heyyy Rimzhim! .<br />
+             
             </p>
             <a href="" class="btn">Explore Now &#8594;</a>
           </div>
